feat: 뷰포트 증분(Delta) 조회 구조 기반 준비 및 PhotoboothDto 정리
- PhotoboothDto에 lastUpdated 필드 추가 (@JsonIgnore 처리)
- 클러스터링 관련 필드(cluster/count/bucketSize) 주석 처리 또는 정리
- Delta API 설계를 위한 hasChangedSince 로직 구조 정리
- 기존 PhotoboothService 흐름 점검 및 Delta 적용을 위한 준비
- 전체적으로 클러스터링 기능 제거 방향으로 DTO/로직 구조 조정