@@ -2,12 +2,15 @@
 package com.nemo.backend.domain.map.service;
 
 import com.nemo.backend.domain.map.dto.PhotoboothDto;
+import com.nemo.backend.domain.map.dto.ViewportDeltaRequest;
+import com.nemo.backend.domain.map.dto.ViewportDeltaResponse;
 import com.nemo.backend.domain.map.dto.ViewportRequest;
 import com.nemo.backend.domain.map.util.NaverApiClient;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -39,6 +42,122 @@ public class PhotoboothService {
 
     private static final int PAGE_SIZE = 5;               // 네이버 LocalSearch 최대 display=5
     private static final int MAX_PAGES_PER_KEYWORD = 4;   // 한 키워드당 최대 20개 수집
+
+    /**
+     * 뷰포트 증분(Delta) 조회
+     *
+     * - 현재 뷰포트 기준 전체 마커 목록을 한 번 계산한 뒤,
+     *   클라이언트가 보낸 knownIds / sinceTs를 이용해
+     *   added / updated / removed를 나눠서 반환한다.
+     *
+     * 🧠 핵심 아이디어
+     *  1) current  = 현재 서버 기준 뷰포트 안의 마커들
+     *  2) knownIds = 클라이언트가 이미 가지고 있는 마커 ID들
+     *
+     *  - added   : current에는 있는데, knownIds에는 없는 ID
+     *  - removed : knownIds에는 있는데, current에는 없는 ID
+     *  - updated : 둘 다에 있지만, 내용이 바뀐 마커
+     */
+    public ViewportDeltaResponse getPhotoboothsDelta(ViewportDeltaRequest req) {
+
+        // 1) Delta 요청을 기존 전체 조회용 ViewportRequest로 변환
+        ViewportRequest viewportReq = toViewportRequest(req);
+
+        // 2) 현재 뷰포트 기준 전체 마커 목록 계산
+        //    → 이미 구현되어 있는 메서드 재사용
+        List<PhotoboothDto> current = getPhotoboothsInViewport(viewportReq);
+
+        Instant serverTs = Instant.now(); // 이번 응답 기준 시각
+
+        // 현재 뷰포트 안에 존재하는 placeId 집합
+        Set<String> currentIds = current.stream()
+                .map(PhotoboothDto::getPlaceId)
+                .collect(Collectors.toSet());
+
+        // 클라이언트가 알고 있는 placeId 집합 (null-safe)
+        Set<String> clientKnown = Optional.ofNullable(req.getKnownIds())
+                .map(HashSet::new)
+                .orElseGet(HashSet::new);
+
+        // ----------------------------------------
+        // 3-1) added = 서버에는 있고, 클라이언트엔 없는 마커
+        // ----------------------------------------
+        List<PhotoboothDto> added = current.stream()
+                .filter(dto -> !clientKnown.contains(dto.getPlaceId()))
+                .toList();
+
+        // ----------------------------------------
+        // 3-2) updated = ID는 같지만 내용이 바뀐 마커
+        //  - 여기서는 lastUpdated가 sinceTs 이후인지 여부로 판단하거나,
+        //    비교 필드를 직접 비교하는 방식으로 구현한다.
+        // ----------------------------------------
+        List<PhotoboothDto> updated = current.stream()
+                .filter(dto -> clientKnown.contains(dto.getPlaceId()))
+                .filter(dto -> hasChangedSince(dto, req.getSinceTs()))
+                .toList();
+
+        // ----------------------------------------
+        // 3-3) removed = 클라이언트는 알고 있지만,
+        //       현재 뷰포트 안에는 더 이상 존재하지 않는 마커 ID
+        // ----------------------------------------
+        List<String> removedIds = clientKnown.stream()
+                .filter(id -> !currentIds.contains(id))
+                .toList();
+
+        log.info("[MAP][DELTA] viewport=({},{} ~ {},{}), added={}, updated={}, removed={}",
+                viewportReq.getNeLat(), viewportReq.getNeLng(),
+                viewportReq.getSwLat(), viewportReq.getSwLng(),
+                added.size(), updated.size(), removedIds.size()
+        );
+
+        return ViewportDeltaResponse.builder()
+                .added(added)
+                .updated(updated)
+                .removedIds(removedIds)
+                .serverTs(serverTs)
+                .build();
+    }
+
+    /**
+     * Delta 요청(ViewportDeltaRequest)을
+     * 기존 뷰포트 전체 조회용 ViewportRequest로 변환하는 헬퍼 메서드.
+     *
+     * - brand, limit, zoom 등은 프로젝트 정책에 맞게 세팅하면 된다.
+     */
+    private ViewportRequest toViewportRequest(ViewportDeltaRequest req) {
+        ViewportRequest v = new ViewportRequest();
+        v.setNeLat(req.getNeLat());
+        v.setNeLng(req.getNeLng());
+        v.setSwLat(req.getSwLat());
+        v.setSwLng(req.getSwLng());
+        v.setBrand(req.getBrand());
+        v.setLimit(300); // Delta에서도 최대 300개 정도만 가져오도록 가드
+        // v.setZoom( ... ) // 필요하면 추후 추가
+        return v;
+    }
+
+    /**
+     * 마커가 sinceTs 이후로 변경되었는지 여부를 판단하는 헬퍼.
+     *
+     * - 간단한 버전: DTO 안에 lastUpdated 필드가 있다고 가정하고 비교
+     * - 더 심플한 버전: sinceTs가 null이면 "무조건 변경 없음" 또는
+     *   "무조건 변경 있음" 정책 중 하나를 택해서 구현할 수 있다.
+     *
+     * 지금 단계에서는 예시로만 두고,
+     * 실제 로직은 DB/캐시 구조 설계에 맞춰 수정하면 된다.
+     */
+    private boolean hasChangedSince(PhotoboothDto dto, Instant sinceTs) {
+        if (sinceTs == null) {
+            // sinceTs가 없으면 "변경 여부 판단 X → 업데이트 없음"으로 가정
+            return false;
+        }
+
+        // 🔧 예시: DTO에 lastUpdated가 있을 때
+        if (dto.getLastUpdated() == null) {
+            return false;
+        }
+        return dto.getLastUpdated().isAfter(sinceTs);
+    }
 
     /**
      * 📌 현재 뷰포트 안에 존재하는 포토부스 반환
@@ -122,14 +241,14 @@ public class PhotoboothService {
         List<PhotoboothDto> all = raw.stream()
                 .map(this::toDto)
                 .filter(dto -> dto.getLatitude() != 0 && dto.getLongitude() != 0) // 좌표 없는 경우 제외
-                .collect(Collectors.toList());
+                .toList();
 
         // ────────────────────────────────────────
         // 6) 실제 뷰포트 안에 포함되는 후보만 필터링
         // ────────────────────────────────────────
         List<PhotoboothDto> filtered = all.stream()
                 .filter(p -> inViewport(req, p.getLatitude(), p.getLongitude()))
-                .collect(Collectors.toList());
+                .toList();
 
         // ⭐ 로그(4) — 뷰포트 안에 실제로 존재하는 결과 수
         log.info("[MAP][FILTER] inViewport={}", filtered.size());
